fixed centering on small windows

--- a/frontend/src/styles/practice.css
+++ b/frontend/src/styles/practice.css
@@ -6,7 +6,7 @@
     box-shadow: 0px 0px 10px 0px var(--color-black-trans);
     border-radius: 10px;
     min-height: 400px;
-
+    padding: 10px 5%;
     /* max-width: 1200px; */
 
 }
